name:                warp
version:             0.5.0
synopsis:            distributed command and control
-- description:         
homepage:            https://github.com/pyr/warp-agent
license:             MIT
license-file:        LICENSE
author:              Pierre-Yves Ritschard
maintainer:          pyr@spootnik.org
-- copyright:           
category:            System
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable warp-agent
  main-is:             warp.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.6, hedis >= 0.6.5, aeson >= 0.6.1.0,
                       bytestring >= 0.10.0.2, unordered-containers >= 0.2.3.3,
                       hashmap >= 1.3.0.1, text >= 0.11.2.3,
                       process >= 1.1.0.2, containers >= 0.5.0.0,
                       stm >= 2.4.2, hostname >= 1.0,
                       unix >= 2.4.0.1, base64-string >= 0.2,
                       RSA >= 1.0.6.2, tls-extra >= 0.6.4, tls >= 1.1.5,
                       certificate >= 1.2.1, split >= 0.1.1,
                       filepath >= 1.3, optparse-applicative >= 0.10,
                       hslogger >= 1.2
                       
  -- hs-source-dirs:      
  default-language:    Haskell2010
